--- a/package.json
+++ b/package.json
@@ -10,26 +10,42 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "address": "^2.0.3",
     "ag-grid-community": "^33.2.1",
     "ag-grid-react": "^33.2.1",
     "axios": "^1.8.4",
     "bcryptjs": "^3.0.2",
     "chart.js": "^4.4.8",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
+    "dotenv": "^16.5.0",
     "express": "^4.21.2",
+    "express-rate-limit": "^7.5.0",
+    "helmet": "^8.1.0",
+    "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "moment-timezone": "^0.5.48",
-    "mongoose": "^8.12.1",
+    "mongodb": "^6.15.0",
+    "mongoose": "^8.13.2",
     "multer": "^1.4.5-lts.2",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.10.0",
+    "otplib": "^12.0.1",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
+    "public-ip": "^7.0.1",
+    "querystring": "^0.2.1",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.4.1",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "sanitize-html": "^2.15.0",
+    "smartapi-javascript": "^1.0.27",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
+    "speakeasy": "^2.0.0",
+    "uuid": "^11.1.0",
+    "winston": "^3.17.0",
+    "ws": "^8.18.1"
   }
 }
